--- a/WebContent/post.html
+++ b/WebContent/post.html
@@ -28,7 +28,7 @@
   <body>
     <div class="heading">POST</div>
 
-    <form action="post.php" method="post">
+    <form action="validation/posts.php" method="post">
       <label for="title">Title:</label><br />
       <input type="text" id="title" name="title" /><br />
       <label for="content">Content:</label><br />
